--- a/CFD/Project_2_Lid/references.bib
+++ b/CFD/Project_2_Lid/references.bib
@@ -1,17 +1,3 @@
-@Article{ma7096701,
-AUTHOR = {Culebras, Mario and Gómez, Clara M. and Cantarero, Andrés},
-TITLE = {Review on Polymers for Thermoelectric Applications},
-JOURNAL = {Materials},
-VOLUME = {7},
-YEAR = {2014},
-NUMBER = {9},
-PAGES = {6701--6732},
-URL = {http://www.mdpi.com/1996-1944/7/9/6701},
-ISSN = {1996-1944},
-ABSTRACT = {In this review, we report the state-of-the-art of polymers in thermoelectricity. Classically, a number of inorganic compounds have been considered as the best thermoelectric materials. Since the prediction of the improvement of the figure of merit by means of electronic confinement in 1993, it has been improved by a factor of 3–4. In the mean time, organic materials, in particular intrinsically conducting polymers, had been considered as competitors of classical thermoelectrics, since their figure of merit has been improved several orders of magnitude in the last few years. We review here the evolution of the figure of merit or the power factor during the last years, and the best candidates to compete with inorganic materials. We also outline the best polymers to substitute classical thermoelectric materials and the advantages they present in comparison with inorganic systems.},
-DOI = {10.3390/ma7096701}
-}
-
 @article{cfl,
 author = {Courant R., Friedrichs K. and Lewy H. Math. Ann.},
 title = {Über die partiellen Differenzengleichungen der mathematischen Physik},
@@ -21,70 +7,59 @@ doi = {10.1111/j.1745-3933.2007.00389.x},
 URL = {https://doi.org/10.1007/BF01448839},
 }
 
-@article{doi:10.1111/j.1745-3933.2007.00389.x,
-author = {Bespalov, P. A. and Savina, O. N.},
-title = {Generalized Wiedemann–Franz law and temperature jump in space plasmas with ion-acoustic turbulence},
-journal = {Monthly Notices of the Royal Astronomical Society: Letters},
-volume = {382},
-number = {1},
-pages = {L63-L66},
-year = {2007},
+@article{courant,
+author = {Courant R., Isaacson E. and Rees M.},
+title = {On the Solution of Nonlinear Hyperbolic Differential Equations by Finite Differences},
+journal = {Comm. Pure Appl. Math. 5},
+year = {1952},
+pages = {243-255},
+doi = {10.1002/cpa.3160050303}
+}
+
+@article{bruneau,
+author = {Bruneau C.H.and Jouron C.},
+title = {An efficient scheme for solving steady incompressible Navier-Stokes equations},
+journal = {J. Comput.Phys. 89},
+year = {1990},
+pages = {389–413}
+}
+@article{burger,
+author = {Burggraf O.R.},
+title = {Analytical and numerical studies of the structure of steady separated flows},
+journal = {J. Fluid Mech. 24 },
+year = {1966},
+pages = {113–151}
+}
+@article{tamer,
+author = {Tamer A. AbdelMigid, Khalid M. Saqr, Mohamed A. Kotb and Ahmed A. Aboelfarag},
+title = {Revisiting the lid-driven cavity flow problem: Review and new steady state benchmarking results using GPU
+accelerated code},
+year = {2016},
 doi = {10.1111/j.1745-3933.2007.00389.x},
-URL = {http://dx.doi.org/10.1111/j.1745-3933.2007.00389.x},
-eprint = {/oup/backfile/content_public/journal/mnrasl/382/1/10.1111/j.1745-3933.2007.00389.x/3/382-1-l63.pdf}
+URL = {http://dx.doi.org/10.1016/j.aej.2016.09.013},
 }
 
-@book{Ashcroft,
-  author = 	 {N.W. Ashcroft and N.D. Mermin},
-  title = 	 {Solid State Physics},
-  publisher = 	 {Saunders College},
-  year = 	 {1976},
-  address = 	 {Philadelphia}
-}
-@book{Bristol,
-  title = 	 {Bristol physicists break 150-year-old law},
-  publisher = 	 {University of Bristol},
-  year = 	 {2011},
-  address = 	 {Bristol}
+@article{ghia,
+author = {Ghia U., Ghia K.N. and Shin C.T.},
+title = {High-Re Solutions for Incompressible Flow Using the Navier-Strokes Equation and a Multigrid Method },
+year = {1982},
 }
 
-@article{2017Sci...355..371L,
-   author = {{Lee}, S. and {Hippalgaonkar}, K. and {Yang}, F. and {Hong}, J. and 
-	{Ko}, C. and {Suh}, J. and {Liu}, K. and {Wang}, K. and {Urban}, J.~J. and 
-	{Zhang}, X. and {Dames}, C. and {Hartnoll}, S.~A. and {Delaire}, O. and 
-	{Wu}, J.},
-    title = "{Anomalously low electronic thermal conductivity in metallic vanadium dioxide}",
-  journal = {Science},
-     year = 2017,
-    month = jan,
-   volume = 355,
-    pages = {371-374},
-      doi = {10.1126/science.aag0410},
-   adsurl = {http://adsabs.harvard.edu/abs/2017Sci...355..371L},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-@article{PhysRevB.46.6131,
-  title = {Lower limit to the thermal conductivity of disordered crystals},
-  author = {Cahill, David G. and Watson, S. K. and Pohl, R. O.},
-  journal = {Phys. Rev. B},
-  volume = {46},
-  issue = {10},
-  pages = {6131--6140},
-  numpages = {0},
-  year = {1992},
-  month = {Sep},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevB.46.6131},
-  url = {https://link.aps.org/doi/10.1103/PhysRevB.46.6131}
+@book{Pedlosky, 
+  author = 	 {Pedlosky, Joseph},
+  title = 	 {Geophysical Fluid Dynamics},
+  publisher = 	 {Springer},
+  year = 	 {1987},
 }
 
-
-@article{articleSRV,
-author = {Molli, Muralikrishna and Kamisetti, Venkataramaniah and Valluri, Sree Ram},
-year = {2011},
-month = {11},
-pages = {1171-1178},
-title = {The polylogarithm and the LambertWfunctions in thermoelectrics},
-volume = {89},
-booktitle = {Canadian Journal of Physics}
+@book{anderson1995computational,
+  title={Computational Fluid Dynamics},
+  author={Anderson, J.},
+  isbn={9780070016859},
+  lccn={94021237},
+  series={Computational Fluid Dynamics: The Basics with Applications},
+  url={https://books.google.co.in/books?id=dJceAQAAIAAJ},
+  year={1995},
+  publisher={McGraw-Hill Education}
 }
+
